Update hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -195,28 +195,48 @@ misc {
 
 # see https://wiki.hyprland.org/Configuring/Binds/ for more
 
-binds {
-    workspace_back_and_forth = true
-}
-
 #: Basic {{{
 
-# terminal
+# Terminal
 bind = $mainMod, T, exec, $term
 bind = $mainMod, RETURN, exec, $term
 
-# file manager
+# File manager
 bind = $mainMod SHIFT, RETURN, exec, $filemanager
 
-# kill focused window
+# Kill focused window
 bind = $mainMod SHIFT, Q, killactive,
 
-# launcher
+# Launcher
 bind = $mainMod, D, exec, $menu
 bind = $mainMod ALT, D, exec, $menu-alt
 
-# exit hyprland
+# Exit hyprland
 bind = $mainMod SHIFT, E, exit,
+
+#: }}}
+
+#: Binding modes {{{
+
+# Resize active window (mode)
+bind = ALT, R, submap, resizemode
+submap = resizemode
+binde = , H, resizeactive, -10 0
+binde = , L, resizeactive, 10 0
+binde = , K, resizeactive, 0 -10
+binde = , J, resizeactive, 0 10
+bind = , ESCAPE, submap, reset
+submap = reset
+
+# Move active window (mode)
+bind = ALT, M, submap, movemode
+submap = movemode
+binde = , H, moveactive, -10 0
+binde = , L, moveactive, 10 0
+binde = , K, moveactive, 0 -10
+binde = , J, moveactive, 0 10
+bind = , ESCAPE, submap, reset
+submap = reset
 
 #: }}}
 
@@ -238,7 +258,11 @@ bind = $mainMod, J,     movefocus, d
 
 #: Workspaces {{{
 
-# Switch workspaces with mainMod + [0-9]
+binds {
+    workspace_back_and_forth = true
+}
+
+# Switch workspaces
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -250,7 +274,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+# Move active window to a workspace
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -263,7 +287,7 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Swap active workspace between two monitors
-bind = $mainMod ALT, S, swapactiveworkspaces, $monitor1 $monitor2
+bind = $mainMod ALT, BACKSLASH, swapactiveworkspaces, $monitor1 $monitor2
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -281,26 +305,6 @@ bind = $mainMod SHIFT, J,   movewindow, d
 
 # Pin active floating window
 bind = ALT, BACKSLASH, pin
-
-# Resize active window (mode)
-bind = ALT, R, submap, resizemode
-submap = resizemode
-binde = , H, resizeactive, -10 0
-binde = , L, resizeactive, 10 0
-binde = , K, resizeactive, 0 -10
-binde = , J, resizeactive, 0 10
-bind = , ESCAPE, submap, reset
-submap = reset
-
-# Resize active window (mode)
-bind = ALT, M, submap, movemode
-submap = movemode
-binde = , H, moveactive, -10 0
-binde = , L, moveactive, 10 0
-binde = , K, moveactive, 0 -10
-binde = , J, moveactive, 0 10
-bind = , ESCAPE, submap, reset
-submap = reset
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -324,7 +328,7 @@ bind = $mainMod SHIFT, Space, togglefloating,
 
 #: Media control {{{
 
-# audio
+# Audio
 bind = ,XF86AudioMute, exec, amixer set Master toggle
 bind = ,XF86AudioMicMute, exec, amixer set Capture toggle
 bind = ,XF86AudioRaiseVolume, exec, amixer set Master 2.5%+
@@ -339,12 +343,12 @@ bind = ,XF86AudioPrev, exec, dbus-send --print-reply --dest=org.mpris.MediaPlaye
 
 #: Misc {{{
 
-# backlight
+# Backlight
 bind = ,XF86MonBrightnessUp, exec, light -A 10 && notify-send 'Brightness UP' -u low
 bind = ,XF86MonBrightnessDown, exec, light -U 10 && notify-send 'Brightness DOWN' -u low
 
-# screenshot
-bind = ,Print, exec, grim -g "$(slurp)" $(xdg-user-dir)/Captures/$(date +'%s_grim.png')
+# Screenshot
+bind = ,PRINT, exec, grim -g "$(slurp)" $(xdg-user-dir)/Captures/$(date +'%s_grim.png')
 
 # laptop lid switch
 bindl = ,switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080, 1920,0, 1"
@@ -363,16 +367,17 @@ bindl = ,switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 windowrule = float, yad|nm-connection-editor|pavucontrol
+windowrule = noblur, ^(firefox)$
 windowrule = float, ^(kitty)$
 windowrule = size 50% 50%, ^(kitty)$
 windowrule = move 25% 25%, ^(kitty)$
 windowrule = animation slide, ^(kitty)$
 windowrule = float, ^(Authy Desktop)$
 windowrule = animation slide, ^(Authy Desktop)$
-windowrulev2 = workspace 1, class:^(firefox)$
-windowrule = noblur, ^(firefox)$
 windowrule = size 50% 50%, ^(Brave-browser)$
 windowrule = noblur, ^(Brave-browser)$
+
+windowrulev2 = workspace 1, class:^(firefox)$
 windowrulev2 = workspace 9, class:^(org.telegram.desktop)$
 windowrulev2 = workspace 9, class:^(FeatherWallet)$
 
