--- a/.config/sway/config
+++ b/.config/sway/config
@@ -82,15 +82,8 @@ set $border_size 2
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $launcher ulauncher
-set $menu bemenu-run -i -p "run >" \
-  --fn 'RobotoCondensed Regular 13' \
-  --tb '$inactive-bg-color' --tf '$active-bg-color' \
-  --fb '$bg-color' --ff '$active-bg-color' \
-  --nb '$bg-color' --nf '$text-color' \
-  --hb '$active-bg-color' --hf '$active-text-color' \
-  --sb '$active-bg-color' --sf '$active-text-color' \
-  | xargs swaymsg exec --
+set $menu tofi-drun | xargs swaymsg exec --
+set $menu-alt tofi-run | xargs swaymsg exec --
 
 #: }}}
 
