--- a/.config/sway/config
+++ b/.config/sway/config
@@ -147,7 +147,7 @@ input "type:keyboard" {
 }
 
 input "1:1:AT_Translated_Set_2_keyboard" {
-  xkb_layout "gb,th"
+  xkb_layout "us,th"
 }
 
 input "1241:521:USB-HID_Keyboard" {
