Update Hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -350,9 +350,9 @@ bind = ,XF86MonBrightnessDown, exec, light -U 10 && notify-send 'Brightness DOWN
 # Screenshot
 bind = ,PRINT, exec, grim -g "$(slurp)" $(xdg-user-dir)/Captures/$(date +'%s_grim.png')
 
-# laptop lid switch
-bindl = ,switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080, 1920,0, 1"
-bindl = ,switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
+# Laptop lid switch
+# bindl = ,switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080, 1920,0, 1"
+# bindl = ,switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
 
 #: }}}
 
