--- a/.config/sway/config
+++ b/.config/sway/config
@@ -90,6 +90,7 @@ output * bg $HOME/.wallpaper.jpg fill
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
+# Laptop lid switch
 bindswitch --reload --locked lid:on output $laptop disable
 bindswitch --reload --locked lid:off output $laptop enable
 
