--- a/.config/sway/config
+++ b/.config/sway/config
@@ -24,7 +24,7 @@ exec --no-startup-id /usr/bin/mako
 exec_always --no-startup-id /usr/bin/xrdb -load ~/.Xresources
 
 # autotiling
-exec_always --no-startup-id /usr/bin/autotiling
+exec_always --no-startup-id /usr/bin/autotiling-rs
 
 # import gsettings
 exec_always --no-startup-id ~/bin/import-gsettings
