Update comment header

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -3,6 +3,7 @@
 # ┳━┓┳  ┳━┓┏━┓┳━┓o┏┓┓┏┓┓┓ ┳
 # ┃━┫┃  ┃━┫┃  ┃┳┛┃ ┃  ┃ ┗┏┛
 # ┛ ┛┛━┛┛ ┛┗━┛┛┗┛┛ ┛  ┛  ┛
+# Alacritty config
 #
 # GitHub:       https://github.com/xcession/dotfiles
 # Maintainer:   Пэйнт (Tharawut Paripaiboon)
