--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -76,29 +76,29 @@
 # alternate-scroll-mode=yes
 
 [colors]
-# alpha=1.0
-# foreground=dcdccc
-# background=111111
+alpha=0.9
+foreground=dad9c7
+background=000000
 
 ## Normal/regular colors (color palette 0-7)
-# regular0=222222  # black
-# regular1=cc9393  # red
-# regular2=7f9f7f  # green
-# regular3=d0bf8f  # yellow
-# regular4=6ca0a3  # blue
-# regular5=dc8cc3  # magenta
-# regular6=93e0e3  # cyan
-# regular7=dcdccc  # white
+regular0=000000  # black
+regular1=f6188f  # red
+regular2=1ebb2b  # green
+regular3=fdf834  # yellow
+regular4=2186ec  # blue
+regular5=f85a21  # magenta
+regular6=12c3e2  # cyan
+regular7=ffffff  # white
 
 ## Bright colors (color palette 8-15)
-# bright0=666666   # bright black
-# bright1=dca3a3   # bright red
-# bright2=bfebbf   # bright green
-# bright3=f0dfaf   # bright yellow
-# bright4=8cd0d3   # bright blue
-# bright5=fcace3   # bright magenta
-# bright6=b3ffff   # bright cyan
-# bright7=ffffff   # bright white
+bright0=2e3032   # bright black
+bright1=f841a0   # bright red
+bright2=25c141   # bright green
+bright3=fdf454   # bright yellow
+bright4=2f9ded   # bright blue
+bright5=f97137   # bright magenta
+bright6=19cde6   # bright cyan
+bright7=ffffff   # bright white
 
 ## dimmed colors (see foot.ini(5) man page)
 # dim0=<not set>
