--- a/.config/sway/config
+++ b/.config/sway/config
@@ -45,7 +45,7 @@ set $left h
 set $right l
 
 # preferred terminal
-set $term alacritty
+set $term foot
 
 # preferred file manager
 set $filemanager pcmanfm
