Enable layout switching keybinds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -315,8 +315,8 @@ bindm = $mainMod, mouse:273, resizewindow
 #: Layouts {{{
 
 # Switch between layouts
-# bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, J, togglesplit, # dwindle
 
 # Toggle focussed window fullscreen
 bind = $mainMod, F, fullscreen,
