--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,14 +11,14 @@
 
 #: To get a full list of supported fonts use `kitty list-fonts`
 
-font_family         Iosevka Nerd Font
+font_family         JetBrainsMono Nerd Font
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
 
 #: Font size (in pts)
 
-font_size 16.0
+font_size 14.0
 
 force_ltr yes
 
