--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -129,10 +129,10 @@
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-disconnected": " Disconnected",
         "format-wifi": " {essid} ({signalStrength}%)",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "format-linked": "{ifname} (No IP) ",
+        "format-ethernet": "{ipaddr}/{cidr}  ",
+        "format-linked": "{ifname} (No IP)  ",
         "format-alt": "{ifname}: {ipaddr}/{cidr}",
-        "tooltip-format": "{ifname} via {gwaddr} "
+        "tooltip-format": "{ifname} via {gwaddr}  "
     },
 
     "pulseaudio": {
