--- a/.config/sway/config
+++ b/.config/sway/config
@@ -133,7 +133,8 @@ input type:keyboard {
   repeat_delay 300
   repeat_rate 30
   xkb_layout "us,th"
-  xkb_options "grp:alt_shift_toggle"
+  # xkb_options "grp:alt_shift_toggle"
+  xkb_options "grp:win_space_toggle"
 }
 
 input type:touchpad {
