--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -43,7 +43,7 @@ $monitor1 = eDP-1
 $monitor2 = DP-1
 
 $term = alacritty
-$filemanager = pcmanfm
+$filemanager = nautilus
 
 $menu = tofi-drun | xargs hyprctl dispatch exec --
 $menu-alt = tofi-run | xargs hyprctl dispatch exec --
