Change input language toggle from alt+shift to win+space

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,7 +57,7 @@ input {
     kb_layout = us,th
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:win_space_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -78,12 +78,12 @@ device:epic mouse V1 {
 
 device:at-translated-set-2-keyboard {
     kb_layout = us,th
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:win_space_toggle
 }
 
 device:usb-hid-keyboard {
     kb_layout = us,th
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:win_space_toggle
 }
 
 device:tpps/2-ibm-trackpoint {
