Update decoration settings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -126,12 +126,13 @@ decoration {
     rounding = 9
     multisample_edges = true
 
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
+    blur {
+        enabled = true
+        size = 3
+        passes = 1
+    }
 
-    drop_shadow = yes
+    drop_shadow = true
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
