Update window rules settings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -367,6 +367,7 @@ bind = ,PRINT, exec, grim -g "$(slurp)" $(xdg-user-dir)/Captures/$(date +'%s_gri
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 windowrule = float, yad|nm-connection-editor|pavucontrol
 windowrule = noblur, ^(firefox)$
