--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,7 +42,7 @@ $mainMod = SUPER
 $monitor1 = eDP-1
 $monitor2 = DP-1
 
-$term = alacritty
+$terminal = alacritty
 $filemanager = nautilus
 
 $menu = tofi-drun | xargs hyprctl dispatch exec --
@@ -200,8 +200,8 @@ misc {
 #: Basic {{{
 
 # Terminal
-bind = $mainMod, T, exec, $term
-bind = $mainMod, RETURN, exec, $term
+bind = $mainMod, T, exec, $terminal
+bind = $mainMod, RETURN, exec, $terminal
 
 # File manager
 bind = $mainMod SHIFT, RETURN, exec, $filemanager
