--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -71,30 +71,37 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic mouse V1 {
+# Per-device configs
+# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
+device {
+    name = epic-mouse-v1
     sensitivity = -0.5
 }
 
-device:at-translated-set-2-keyboard {
+device {
+    name = at-translated-set-2-keyboard
     kb_layout = us,th
     kb_options = grp:win_space_toggle
 }
 
-device:usb-hid-keyboard {
+device {
+    name = usb-hid-keyboard
     kb_layout = us,th
     kb_options = grp:win_space_toggle
 }
 
-device:tpps/2-ibm-trackpoint {
+device {
+    name = tpps/2-ibm-trackpoint
     natural_scroll = true
 }
 
-device:elan-trackpoint {
+device {
+    name = elan-trackpoint
     natural_scroll = true
 }
 
-device:elan-touchpad {
+device {
+    name = elan-touchpad
     natural_scroll = true
     tap-to-click = false
 }
