Re-arrange setting and add comment headers

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,6 +27,22 @@ exec-once = waybar & hyprpaper
 #: Variables {{{
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
+
+# Mod key used for most binds
+# MOD4 = SUPER
+# (Use the `xmodmap` command to list them all)
+$mainMod = SUPER
+
+# preferred terminal
+$terminal = alacritty
+
+# preferred file manager
+$filemanager = nautilus
+
+# define monitor(s)
+$monitor1 = eDP-1
+$monitor2 = DP-1
+
 # bar and window color
 $bg-color =             "#16161c"
 $text-color =           "#fdf0ed"
@@ -37,14 +53,7 @@ $inactive-text-color =  "#6c6f93"
 $urgent-bg-color =      "#f43e5c"
 $indicator-color =      "#fab28e"
 
-$mainMod = SUPER
-
-$monitor1 = eDP-1
-$monitor2 = DP-1
-
-$terminal = alacritty
-$filemanager = nautilus
-
+# Your preferred application launcher
 $menu = tofi-drun | xargs hyprctl dispatch exec --
 $menu-alt = tofi-run | xargs hyprctl dispatch exec --
 
