--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,6 +33,12 @@ exec-once = waybar & hyprpaper
 # (Use the `xmodmap` command to list them all)
 $mainMod = SUPER
 
+# direction keys
+$up = k
+$down = j
+$left = h
+$right = l
+
 # preferred terminal
 $terminal = alacritty
 
@@ -266,10 +272,10 @@ bind = $mainMod, left,  movefocus, l
 bind = $mainMod, right, movefocus, r
 
 # Move focus with hjkl keys
-bind = $mainMod, K,     movefocus, u
-bind = $mainMod, J,     movefocus, d
-bind = $mainMod, H,     movefocus, l
-bind = $mainMod, L,     movefocus, r
+bind = $mainMod, $up,       movefocus, u
+bind = $mainMod, $down,     movefocus, d
+bind = $mainMod, $left,     movefocus, l
+bind = $mainMod, $right,    movefocus, r
 
 #: }}}
 
@@ -315,10 +321,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 #: Windows {{{
 
 # Move active window
-bind = $mainMod SHIFT, K,   movewindow, u
-bind = $mainMod SHIFT, J,   movewindow, d
-bind = $mainMod SHIFT, H,   movewindow, l
-bind = $mainMod SHIFT, L,   movewindow, r
+bind = $mainMod SHIFT, $up,     movewindow, u
+bind = $mainMod SHIFT, $down,   movewindow, d
+bind = $mainMod SHIFT, $left,   movewindow, l
+bind = $mainMod SHIFT, $right,  movewindow, r
 
 # Pin active floating window
 bind = ALT, BACKSLASH, pin
