Update moving around settings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -265,17 +265,17 @@ submap = reset
 
 #: Moving around {{{
 
-# move focus with arrow keys
-bind = $mainMod, up,    movefocus, u
-bind = $mainMod, down,  movefocus, d
-bind = $mainMod, left,  movefocus, l
-bind = $mainMod, right, movefocus, r
-
 # Move focus with hjkl keys
 bind = $mainMod, $up,       movefocus, u
 bind = $mainMod, $down,     movefocus, d
 bind = $mainMod, $left,     movefocus, l
 bind = $mainMod, $right,    movefocus, r
+
+# move focus with arrow keys
+bind = $mainMod, up,    movefocus, u
+bind = $mainMod, down,  movefocus, d
+bind = $mainMod, left,  movefocus, l
+bind = $mainMod, right, movefocus, r
 
 #: }}}
 
@@ -320,11 +320,17 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 #: Windows {{{
 
-# Move active window
+# Move active window with hjkl keys
 bind = $mainMod SHIFT, $up,     movewindow, u
 bind = $mainMod SHIFT, $down,   movewindow, d
 bind = $mainMod SHIFT, $left,   movewindow, l
 bind = $mainMod SHIFT, $right,  movewindow, r
+
+# Move active window with arrow keys
+bind = $mainMod SHIFT, up,     movewindow, u
+bind = $mainMod SHIFT, down,   movewindow, d
+bind = $mainMod SHIFT, left,   movewindow, l
+bind = $mainMod SHIFT, right,  movewindow, r
 
 # Pin active floating window
 bind = ALT, BACKSLASH, pin
